# Multi-Stage-Content-Production-Pipeline-with-CrewAI

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: init.sql
configs/grafana/provisioning/dashboards/: dashboard.yml
configs/mlflow/: Dockerfile
dagster_home/: dagster.yaml
dagster_home/.telemetry/: id.yaml
scripts/: init.sh
src/api/: Dockerfile  app.py
src/dagster_pipeline/: Dockerfile  assets.py
src/editing_crew/: crew.py
src/research_crew/: crew.py
src/shared/: config.py  db.py  models.py
src/visual_crew/: crew.py
src/writing_crew/: crew.py
tests/unit/: test_editing.crew.py  test_editing_crew.py  test_research_crew.py  test_writing_crew.py
