[project]
name = "content-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.28.0",
    "langchain-openai>=0.1.0",
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "chromadb>=1.0.0",
    "mlflow>=2.11.0",
    "structlog>=24.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "textstat>=0.7.3",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short"
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests requiring running services",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
